finalizado a primeira parte

--- a/fm_principal.ui
+++ b/fm_principal.ui
@@ -64,6 +64,19 @@ border-radius: 10px;
      <string>Nova venda</string>
     </property>
    </widget>
+   <widget class="QLabel" name="lb_nome">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>270</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>sem colaborador</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
