--- a/fm_log.ui
+++ b/fm_log.ui
@@ -33,7 +33,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="txt_username"/>
+       <widget class="QLineEdit" name="txt_username">
+        <property name="text">
+         <string>tutu</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -48,6 +52,9 @@
       </item>
       <item>
        <widget class="QLineEdit" name="txt_senha">
+        <property name="text">
+         <string>123</string>
+        </property>
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
